@@ -1,6 +1,10 @@
 2019-08-19  7.0.8-62 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.8-62, GIT revision 16...
 
+2019-08-23  7.0.8-62 Dirk Lemstra <dirk@lem.....org>
+  * Added option to limit the maximum point size with -define
+    caption:max-pointsize=pointsize.
+
 2019-08-19  7.0.8-62 Cristy  <quetzlzacatenango@image...>
   * Conditionally compile call to AcquireCLocale() (reference
     https://github.com/ImageMagick/ImageMagick/issues/1669).
